assets/css/style.css
/* ... */
@media only screen and (min-width: 2101px) {
	#navbar {
		width: 100%;
		padding: 0 20vw;
	}
}

@media only screen and (max-width: 1023px) {
	#navbar>#breadcumb {
		top: 0;
		height: 58px;
		font-size: 20px;
	}

	#navbar>#breadcumb,
	#navbar>.buttons {
		position: fixed;
		width: 100%;
		left: 0;
		display: flex;
		align-items: center;
	}

	#navbar:not([class*="shrinked"])>#breadcumb {
		height: var(--navbar-h-noshrink);
	}

	#navbar.shrinked>#breadcumb {
		background-color: var(--navbar-bg);
		backdrop-filter: blur(10px);
		-webkit-backdrop-filter: blur(10px);
		border-bottom: 1px solid var(--navbar-border);
	}

	#navbar>#breadcumb>.link[data-insert-navigation="false"] {
		transform: translateX(calc(-100% - 10px));
	}

	#navbar>#breadcumb>#title-container>.real-title,
	#navbar>#breadcumb>#title-container>.loading-title {
		text-align: center;
	}

	#navbar>#breadcumb>#title-container {
		margin: auto;
		padding: 0 20px;
		max-width: calc(100% - (var(--back-width) * 2));
	}

	#navbar>#breadcumb>#title-container>.loading-title {
		width: 100%;
		left: 0;
	}

	#navbar>#breadcumb>#title-container.loading>.loading-title {
		transform: translateY(-100%);
	}

	#navbar>.buttons {
		bottom: 0;
		justify-content: space-evenly;
		padding: 0 25px;
		background-color: var(--navbar-bg);
		backdrop-filter: blur(10px);
		-webkit-backdrop-filter: blur(10px);
		border-top: 1px solid var(--navbar-border);
	}

	#navbar>.buttons>.button {
		height: var(--nav-buttons-h);
		max-width: 150px;
		display: grid;
		flex-basis: 100%;
		border: 0;
		background: none;
		font-size: 20px;
		text-align: center;
	}

	#navbar>.buttons>.button>.icon {
		width: 70px;
		padding: 6px 0;
		height: 32px;
		border-radius: 1em;
		margin: auto;
	}

	#navbar>#breadcumb>.link {
		position: absolute;
		margin-left: 10px;
	}

	@media (hover: hover) {

		#navbar>.buttons>.button:hover>*,
		#navbar>.buttons>.button:focus-visible>* {
			filter: none;
		}

		#navbar>.buttons>.button:hover>.icon,
		#navbar>.buttons>.button:focus-visible>.icon {
			background: var(--button-bg-hover-inverted);
			filter: invert(1);
		}
	}

	@media (hover: none) {

		#navbar>.buttons>.button:active>*,
		#navbar>.buttons>.button:focus-visible>* {
			filter: none;
		}

		#navbar>.buttons>.button:active>.icon,
		#navbar>.buttons>.button:focus-visible>.icon {
			background: var(--button-bg-hover-inverted);
			filter: invert(1);
		}
	}
}

@media only screen and (max-width: 500px) {
	#navbar>.buttons {
		padding: 0 5px;
	}

	#navbar>.buttons>.button {
		padding: 8px 3px;
	}
}


/********************************************************************************
**************************** PAGE SPECIFIC LAYOUTS ******************************
/********************************************************************************/

/******************************* Index Page Layout ******************************/
#index {
	display: flex;
	flex-direction: column;
	gap: 60px;
}

#index.content {
	margin-top: 225px;
}

#index .blog-card {
	user-select: none;
	border-radius: 2em;
	color: #fafafa;
	/* harcoded cause it's the same for light/dark (it goes with v1/v2...) */
}

#index .blog-card span {
	margin-top: 18px;
}

#index .blog-card.v1 {
	background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
}

#index .blog-card.v2 {
	background-image: linear-gradient(43deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
}

#index .blog-card.v3 {
	background-image: linear-gradient(43deg, #8ba6ff 0%, #2BD2FF 52%, #2bffd1 90%);
}

#index .blog-card.v4 {
	background-image: linear-gradient(43deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
}

#index .blog-card.v5 {
	background-image: linear-gradient(43deg, #FAD961 0%, #ffb388 50%, #fff5d3 100%);
}

@media only screen and (max-width: 1600px) {
	#index.content {
		margin-top: 225px;
	}
}

@media only screen and (max-width: 1023px) {
	#index.content {
		margin-top: 100px;
	}

	#index .blog-card {
		text-align: center;
		justify-content: center;
	}
}

/* Portfolio Header */
#portfolio-header {
	display: flex;
	gap: 20px;
	align-items: center;
}

#portfolio-header-image-container {
	display: flex;
	flex-direction: column;
	gap: 10px;
	flex-basis: 50%;
}

.portfolio-header-image {
	width: 100%;
	height: auto;
}

#portfolio-header-text-container {
	display: flex;
	flex-direction: column;
	gap: 34px;
	flex-basis: 50%;
}

@media only screen and (max-width: 800px) {
	#portfolio-header {
		flex-direction: column;
	}
}

/* About Section */
#about-section {
	display: flex;
	flex-direction: column;
	gap: 16px;
}

.about-section-content {
	display: flex;
	flex-direction: column;
	gap: 34px;
}

/* Project Section */
.projects-section {
	display: flex;
	flex-direction: column;
	gap: 16px;
}

.grid-container {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-column-gap: 34px;
	grid-row-gap: 34px;
}

.grid-container.equal {
	grid-auto-rows: 1fr
}

@media only screen and (max-width: 767px) {
	.grid-container {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media only screen and (max-width: 500px) {
	.grid-container {
		grid-template-columns: repeat(1, 1fr);
	}
}

/* Project Cards */
.project-card {
	display: flex;
	flex-direction: column;
	gap: 34px;
}

.project-card>a {
	margin-top: auto;
}

.project-card-text-container {
	flex-direction: column;
	display: flex;
	gap: 16px
}

.project-card-text {
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	-webkit-line-clamp: 4;
	-webkit-box-orient: vertical;
}

.project-title {
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	-webkit-line-clamp: 1;
	-webkit-box-orient: vertical;
}

.project-image {
	height: 100%;
	width: auto;
	aspect-ratio: 1/1;
	border-radius: 51px;
	border: 1px solid var(--img-border);
}

.card-image {
	position: relative;
	height: 200px;
	margin: 0 auto;
}
/* ... */

